# multi-sensor-slam-tookit

./: .dockerignore  .gitignore  Dockerfile  README.md  buildkitd.toml
Calibration_Tookit/multi_lidar/src/multi_lidar_calibration/: CMakeLists.txt
Calibration_Tookit/multi_lidar/src/multi_lidar_calibration/include/: multi_lidar_calibrator.h
Docker_Tookit/: .dockerignore  Dockerfile.cross-arch  README.md  build-cross-arch.sh  buildkitd.toml  check-deployment.sh  deployment_check_20260210_175617.txt  docker-compose.yml  rebuild-code.sh  run-docker.sh
Docker_Tookit/buildroot/: Dockerfile.buildroot  README.md  build-buildroot.sh  docker-compose.buildroot.yml  run-buildroot.sh
Docker_Tookit/ubuntu/: Dockerfile.cross-arch  README.md  build-cross-arch.sh  docker-compose.yml  rebuild-code.sh  run-docker.sh
PointClouds_Fusion/fusion_pointclouds/src/fusion_pointcloud/config/: params.yaml
PointClouds_Fusion/lidar_fusion/src/: CMakeLists.txt  README.md  package.xml
PointClouds_Fusion/lidar_fusion/src/include/lidar_fusion/: lidar_fusion.h
PointClouds_Fusion/lidar_fusion/src/launch/: lidar_fusion.launch
PointClouds_Fusion/lidar_fusion/src/src/: lidar_fusion.cpp  lidar_fusion_node.cpp
heading_ws/src/: CHANGELOG.md  CMakeLists.txt  PROJECT_SUMMARY.md  README.md  package.xml  单激光雷达姿态与墙距方案_无IMU_v3.txt
heading_ws/src/config/: default_params.yaml
heading_ws/src/include/heading_estimation/: Config.h  HeadingEstimator.h  PointCloudProcessing.h
heading_ws/src/launch/: heading_estimation.launch
heading_ws/src/src/: Config.cpp  HeadingEstimator.cpp  PointCloudProcessing.cpp  heading_estimation_node.cpp
imu_calib/src/code_utils/src/: sumpixel_test.cpp
imu_ws/src/imu_modbus_driver/: CMakeLists.txt  package.xml
imu_ws/src/imu_modbus_driver/launch/: imu_modbus.launch
imu_ws/src/imu_modbus_driver/src/: imu_modbus_node.cpp
lidar_target_ws/: algorithm_comparison.md
lidar_target_ws/lidar_target01/src/: CMakeLists.txt  package.xml
lidar_target_ws/lidar_target01/src/config/: tracker.yaml
lidar_target_ws/lidar_target01/src/include/tracker/: circle_fit.h  config.h  kalman_filter.h  node.h  types.h
lidar_target_ws/lidar_target01/src/launch/: tracker.launch
lidar_target_ws/lidar_target01/src/src/: circle_fit.cpp  kalman_filter.cpp  main.cpp  node.cpp
lidar_target_ws/lidar_target02/src/lidar_target_localization/: CMakeLists.txt  package.xml
lidar_target_ws/lidar_target02/src/lidar_target_localization/config/: params.yaml
lidar_target_ws/lidar_target02/src/lidar_target_localization/include/lidar_target_localization/: kalman_filter.h  target_detector.h
lidar_target_ws/lidar_target02/src/lidar_target_localization/launch/: target_localization.launch
lidar_target_ws/lidar_target02/src/lidar_target_localization/msg/: TargetPosition.msg
lidar_target_ws/lidar_target02/src/lidar_target_localization/src/: kalman_filter.cpp  target_detector.cpp
lidar_target_ws/src/: CMakeLists.txt  README.md  package.xml
lidar_target_ws/src/include/lidar_target_detection/: lidar_target_detector.h
lidar_target_ws/src/launch/: lidar_target_detector.launch
lidar_target_ws/src/src/: lidar_target_detector.cpp
liosam_ws/src/LIO-SAM/: CMakeLists.txt
nan_filter_ws/src/nan_filter/: CMakeLists.txt  package.xml
nan_filter_ws/src/nan_filter/launch/: nan_filter.launch
nan_filter_ws/src/nan_filter/src/: nan_filter_node.cpp
sync_ws/src/imu_lidar_sync/: CMakeLists.txt  package.xml
sync_ws/src/imu_lidar_sync/src/: imu_lidar_sync_node.cpp
timoo/src/timoo/: package.xml
timoo/src/timoo_driver/: CMakeLists.txt  nodelet_timoo.xml  package.xml
timoo/src/timoo_driver/include/timoo_driver/: driver.h  input.h  ring_sequence.h
timoo/src/timoo_driver/launch/: nodelet_manager.launch
timoo/src/timoo_driver/src/driver/: driver.cc  nodelet.cc  timoo_node.cc
timoo/src/timoo_driver/src/lib/: CMakeLists.txt  input.cc
timoo/src/timoo_laserscan/: nodelets.xml  package.xml
timoo/src/timoo_laserscan/include/timoo_laserscan/: timoo_laserscan.h
timoo/src/timoo_laserscan/src/: node.cpp  nodelet.cpp  timoo_laserscan.cpp
timoo/src/timoo_msgs/: package.xml
timoo/src/timoo_pointcloud/: nodelets.xml  package.xml
timoo/src/timoo_pointcloud/include/timoo_pointcloud/: calibration.h  convert.h  datacontainerbase.h  organized_cloudXYZIR.h  pointcloudXYZIR.h  rawdata.h  transform.h
timoo/src/timoo_pointcloud/launch/: TM16.launch  TM16_Multi3.launch  cloud_nodelet.launch  laserscan_nodelet.launch  transform_nodelet.launch
timoo/src/timoo_pointcloud/src/conversions/: cloud_node.cc  cloud_nodelet.cc  convert.cc  organized_cloudXYZIR.cc  pointcloudXYZIR.cc  transform.cc  transform_node.cc  transform_nodelet.cc
timoo/src/timoo_pointcloud/src/lib/: calibration.cc  rawdata.cc
tmlidar_ws/: readme.md
tmlidar_ws/src/lidar_driver/: CMakeLists.txt  nodelet_lidar.xml  package.xml
tmlidar_ws/src/lidar_driver/cfg/: lidarNode.cfg
tmlidar_ws/src/lidar_driver/include/lidar_driver/: driver.h  input.h  ring_sequence.h  time_conversion.hpp
tmlidar_ws/src/lidar_driver/launch/: nodelet_manager.launch
tmlidar_ws/src/lidar_driver/src/: vdump
tmlidar_ws/src/lidar_driver/src/driver/: CMakeLists.txt  driver.cc  lidar_node.cc  nodelet.cc
tmlidar_ws/src/lidar_driver/src/lib/: CMakeLists.txt  input.cc
tmlidar_ws/src/lidar_laserscan/: CMakeLists.txt  nodelets.xml  package.xml
tmlidar_ws/src/lidar_laserscan/cfg/: lidarLaserScan.cfg
tmlidar_ws/src/lidar_laserscan/include/lidar_laserscan/: lidar_laserscan.h
tmlidar_ws/src/lidar_laserscan/src/: lidar_laserscan.cpp  node.cpp  nodelet.cpp
tmlidar_ws/src/lidar_msgs/: CMakeLists.txt  package.xml
tmlidar_ws/src/lidar_msgs/msg/: lidarPacket.msg  lidarScan.msg
tmlidar_ws/src/lidar_pointcloud/: CMakeLists.txt  nodelets.xml  package.xml
tmlidar_ws/src/lidar_pointcloud/cfg/: CloudNode.cfg  TransformNode.cfg
tmlidar_ws/src/lidar_pointcloud/launch/: cloud_nodelet.launch  laserscan_nodelet.launch  scan.launch  transform_nodelet.launch
tmlidar_ws/src/lidar_pointcloud/params/: lidar.rviz  lidar.yaml
tmlidar_ws/src/lidar_pointcloud/src/conversions/: convert.cc  (+8 more)
(+10 files in other folders)
