<?xml version="1.0"?>
<package format="2">
  <name>heading_estimation</name>
  <version>1.0.0</version>
  <description>Single LiDAR heading and wall distance estimation for roadheader without IMU</description>

  <maintainer email="user@example.com">User</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>tf</depend>
  <depend>eigen</depend>
  <depend>pcl_conversions</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
  </export>
</package>
