<?xml version="1.0"?>
<package format="2">
  <name>lidar_reflector_target_tracker</name>
  <version>1.0.0</version>
  <description>ROS1 node for tracking cylindrical reflector targets using LiDAR point clouds with intensity filtering and RANSAC circle fitting</description>

  <maintainer email="user@example.com">User</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>pcl_ros</depend>

  <export>
  </export>
</package>
