<?xml version="1.0"?>
<package format="2">
  <name>lidar_target_localization</name>
  <version>1.0.0</version>
  <description>Real-time lidar reflective target localization</description>
  <maintainer email="bai@user.com">bai</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>message_runtime</depend>

  <export></export>
</package>
